--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun build src/index.ts --outdir dist --target node && tsc --emitDeclarationOnly",
+    "build": "bun build src/index.ts --outdir dist --target node && tsc --emitDeclarationOnly && tsc-alias",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch",
@@ -42,6 +42,7 @@
     "@types/node": "^22.10.5",
     "bun-types": "^1.3.6",
     "semantic-release": "^25.0.2",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.7.2"
   },
   "engines": {
