--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "semver": "^7.7.3",
     "yaml": "^2.6.1",
     "zod": "^3.24.1"
   },
@@ -40,6 +41,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/node": "^22.10.5",
+    "@types/semver": "^7.7.1",
     "bun-types": "^1.3.6",
     "semantic-release": "^25.0.2",
     "tsc-alias": "^1.8.16",
