--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -31,6 +31,9 @@ jobs:
 
       - run: bun install
 
+      - name: Test
+        run: bun test
+
       - name: Build
         run: bun run build
 
