fix: embed skill-router template via text import for bundle compatibility
readFileSync with import.meta.url fails when the CLI is compiled with
bun build --compile, as the .md file is not included in the binary.
Using a text import inlines the content at build time.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun run typecheck && bun build src/index.ts --outdir dist --target node && cp src/sync/templates/skill-router.md dist/ && tsc --emitDeclarationOnly && tsc-alias",
+    "build": "bun run typecheck && bun build src/index.ts --outdir dist --target node && tsc --emitDeclarationOnly && tsc-alias",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch",
